// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidateVerificationCodeStep /> render() should render the component with the verification code validation and password if user has one set 1`] = `
<div>
  <div
    class="headingBold"
  >
    Step 3: 
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter the 6-digit verification code generated from your authenticator app.
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-1"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="textSection mb16"
  >
    Enter your password.
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-3"
        name="userPassword"
        placeholder="Enter your password"
        type="password"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<ValidateVerificationCodeStep /> render() should render the component with the verification code validation and without password none set 1`] = `
<div>
  <div
    class="headingBold"
  >
    Step 3: 
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter the 6-digit verification code generated from your authenticator app.
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-5"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`<ValidateVerificationCodeStep /> render() should show a different title when used as the first step of an update 1`] = `
<div>
  <div
    class="headingBold"
  >
    Verify your code
  </div>
  <div
    class="textSection mb16"
  >
    Enter the 6-digit verification code generated from your authenticator app.
  </div>
  <div>
    <div
      class="wrapper"
    >
      <input
        class="input"
        id="input-text-9"
        name="verificationCode"
        placeholder="Enter 6-digit verification code from app"
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;
